fixed header logo sizing on mobile

--- a/css/main.scss
+++ b/css/main.scss
@@ -102,6 +102,10 @@ h1,h2,h3,h4,h5,h6{
   img{
     // width: 20em;
     float: left;
+
+    @media(max-width: $breakpoint3){
+      max-width: 160px;
+    }
   }
 }
 
